change in educ/health/demo sidebar

--- a/web/imports.html
+++ b/web/imports.html
@@ -354,7 +354,17 @@ and open the template in the editor.
                             <ul class="treeview-menu">
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Education<span class="fa fa-angle-left pull-right"></span></a>
                                     <ul class="treeview-menu">
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Kinder Public</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Kindergarten Data in Public Elementary School</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Private Elementary Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Private Kinder Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Public Elementary Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Public Secondary Schools (?)</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Total Enrollment in Public Secondary Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Government Secondary Schools - Teacher Deployment</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Classroom Furnitures for Government Secondary Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Instructional Rooms for Government Elementary Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Instructional Rooms for Government Secondary Schools</a></li>
+<!--                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Kinder Public</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Kinder Private</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Elementary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Public</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Secondary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Public</a></li>
@@ -364,30 +374,27 @@ and open the template in the editor.
                                         <li><a href=""><i class="fa fa-circle-o"></i>Private Classroom Facilities</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Public Classroom Facilities</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Instructional rooms for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Government Elementary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  School</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Instructional rooms for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Government Secondary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  School</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Instructional rooms for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Government Secondary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  School</a></li>-->
                                     </ul>
                                 </li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Demographics<span class="fa fa-angle-left pull-right"></span></a>
                                     <ul class="treeview-menu">
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Household Population by Sex</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Household Population by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Age Group and Sex</a></li><br/>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Household Population by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Age Group and Sex</a><br/></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Household Population 5<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; years old and over by Highest<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Grade/Year Completed,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; age group and sex</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Projected Household<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Population, Land Area and<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Density</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Projected Household<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Population by Sex</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Projected Household<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Population by Age-Sex Group</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Household Population 10<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; years old and over by Age Group,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sex, and Marital Status </a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Health<span class="fa fa-angle-left pull-right"></span></a>
                                     <ul class="treeview-menu">
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Percentage Distribution of<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Elementary School
-                                                Children<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; in Each District in the<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Division of
-                                                Caloocan by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nutritional Status/By Gender</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>List of Health Centers</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>List of Private and<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Government Hospitals</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Total Number of Doctors,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nurses, Midwives</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Live Birth Per Day</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Mortality Report</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Morbidity Report</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Percentage Distribution of<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Elementary School
+                                                Children<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; in Each District in the<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Division of
+                                                Caloocan by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nutritional Status/By Gender</a></li>
+                                        <!--<li><a href=""><i class="fa fa-circle-o"></i>List of Health Centers</a></li>-->
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Total Number of Doctors,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nurses, Midwives</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>List of Private and<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Government Hospitals</a></li>
                                     </ul>
                                 </li>          
                             </ul>
