--- a/web/imports.html
+++ b/web/imports.html
@@ -354,16 +354,16 @@ and open the template in the editor.
                             <ul class="treeview-menu">
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Education<span class="fa fa-angle-left pull-right"></span></a>
                                     <ul class="treeview-menu">
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Kindergarten Data in Public Elementary School</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Private Elementary Schools</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Private Kinder Schools</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Public Elementary Schools</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Public Secondary Schools (?)</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Total Enrollment in Public Secondary Schools</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Government Secondary Schools - Teacher Deployment</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Classroom Furnitures for Government Secondary Schools</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Instructional Rooms for Government Elementary Schools</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Instructional Rooms for Government Secondary Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Kindergarten Data in<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   Public Elementary School</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Private<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Elementary Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Private<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   KinderSchools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Public<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Elementary Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Public<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Secondary Schools (?)</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Total Enrollment in Public<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Secondary Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Government Secondary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Schools - Teacher<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Deployment</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Classroom Furnitures for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Government Secondary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Instructional Rooms for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Government Elementary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Schools</a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Instructional Rooms for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Government Secondary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Schools</a></li>
 <!--                                        <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Kinder Public</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Kinder Private</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Enrollment in Elementary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Public</a></li>
@@ -379,9 +379,9 @@ and open the template in the editor.
                                 </li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Demographics<span class="fa fa-angle-left pull-right"></span></a>
                                     <ul class="treeview-menu">
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Household Population by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Age Group and Sex</a><br/></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Household Population by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Age Group and Sex</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Household Population 5<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; years old and over by Highest<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Grade/Year Completed,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; age group and sex</a></li>
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Household Population 10<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; years old and over by Age Group,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sex, and Marital Status </a></li>
+                                        <li><a href=""><i class="fa fa-circle-o"></i>Household Population 10<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; years old and over by Age<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Group, Sex, and<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Marital Status </a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Health<span class="fa fa-angle-left pull-right"></span></a>
