Manual input to db

--- a/web/imports.html
+++ b/web/imports.html
@@ -379,7 +379,7 @@ and open the template in the editor.
                                 </li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Demographics<span class="fa fa-angle-left pull-right"></span></a>
                                     <ul class="treeview-menu">
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Household Population by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Age Group and Sex</a></li>
+                                        <li><a href="byAgeGroupSex.jsp"><i class="fa fa-circle-o"></i>Household Population by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Age Group and Sex</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Household Population 5<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; years old and over by Highest<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Grade/Year Completed,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; age group and sex</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Household Population 10<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; years old and over by Age<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Group, Sex, and<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Marital Status </a></li>
                                     </ul>
