live births link

--- a/web/importsAide.html
+++ b/web/importsAide.html
@@ -386,7 +386,7 @@ and open the template in the editor.
                                 </li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Health<span class="fa fa-angle-left pull-right"></span></a>
                                     <ul class="treeview-menu">
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Live Birth Per Day</a></li>
+                                        <li><a href="liveBirths.jsp"><i class="fa fa-circle-o"></i>Live Birth Per Day</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Mortality Report</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Morbidity Report</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>Percentage Distribution of<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Elementary School
