total no of docs nurses mws

--- a/web/importsAide.html
+++ b/web/importsAide.html
@@ -393,7 +393,7 @@ and open the template in the editor.
                                                 Children<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; in Each District in the<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Division of
                                                 Caloocan by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nutritional Status/By Gender</a></li>
                                         <!--<li><a href=""><i class="fa fa-circle-o"></i>List of Health Centers</a></li>-->
-                                        <li><a href=""><i class="fa fa-circle-o"></i>Total Number of Doctors,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nurses, Midwives</a></li>
+                                        <li><a href="numOfDocsNursesMidwives.jsp"><i class="fa fa-circle-o"></i>Total Number of Doctors,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nurses, Midwives</a></li>
                                         <li><a href=""><i class="fa fa-circle-o"></i>List of Private and<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Government Hospitals</a></li>
                                     </ul>
                                 </li>          
