--- a/web/importsAide.html
+++ b/web/importsAide.html
@@ -266,7 +266,7 @@ and open the template in the editor.
                             <li class="dropdown user user-menu">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <img src="AdminLTE/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                                    <span class="hidden-xs">Marielle Lapidario</span>
+                                    <span class="hidden-xs">Gian Roxas</span>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <!-- User image -->
@@ -274,7 +274,7 @@ and open the template in the editor.
                                         <img src="AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                                         <p>
-                                            Marielle Lapidario - Web Developer
+                                            Gian Roxas - Web Developer
                                             <small>Member since May 2016.</small>
                                         </p>
                                     </li>
@@ -322,7 +322,7 @@ and open the template in the editor.
                             <img src="AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                         </div>
                         <div class="pull-left info">
-                            <p>Marielle Lapidario</p>
+                            <p>Gian Roxas</p>
                             <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                         </div>
                     </div>
