--- a/web/importsAide.html
+++ b/web/importsAide.html
@@ -76,12 +76,12 @@ and open the template in the editor.
         <div class="wrapper">
             <header class="main-header">
                 <!-- Logo -->
-                <a href="" class="logo">
+                <div class="logo">
                     <!-- mini logo for sidebar mini 50x50 pixels -->
                     <span class="logo-mini"><b>TEK</b></span>
                     <!-- logo for regular state and mobile devices -->
                     <span class="logo-lg">Project <b>TEK</b></span>
-                </a>
+                </div>
                 <!-- Header Navbar: style can be found in header.less -->
                 <nav class="navbar navbar-static-top">
                     <!-- Sidebar toggle button-->
