--- a/web/importsAide.html
+++ b/web/importsAide.html
@@ -189,7 +189,7 @@ and open the template in the editor.
                                 <span>Reports Library</span>
                             </a>
                             <ul>
-                                <li style="font-size: 110%; padding-bottom: 8px; color: #cc5200"><a href="#" style="color: #cc5200">Education<span class="fa fa-angle-left" style="float: right"></span></a>
+                                <li style="font-size: 110%; padding-bottom: 8px; color: #cc5200"><a href="#" style="color: #cc5200">Education<span class="fa fa-angle-right" style="float: right; margin-right: 5%; margin-top: 1.5%;"></span></a>
                                     <ul class="treeview-menu">
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Kindergarten Data in<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   Public Elementary School</a></li>
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Enrollment in Private<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Elementary Schools</a></li>
@@ -203,14 +203,14 @@ and open the template in the editor.
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Instructional Rooms for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Government Secondary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Schools</a></li>
                                         </ul>
                                 </li>
-                                <li style="font-size: 110%; padding-bottom: 8px; color: #cc5200"><a href="#" style="color: #cc5200">Demographics<span class="fa fa-angle-left" style="float: right"></span></a>
+                                <li style="font-size: 110%; padding-bottom: 8px; color: #cc5200"><a href="#" style="color: #cc5200">Demographics<span class="fa fa-angle-right" style="float: right; margin-right: 5%; margin-top: 1.5%;"></span></a>
                                     <ul class="treeview-menu">
                                         <li style="margin-left: -20px;"><a href="byAgeGroupSex.jsp"><i class="fa fa-circle-o circles-small"></i>Household Population by<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Age Group and Sex</a></li>
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Household Population 5<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; years old and over by Highest<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Grade/Year Completed,<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; age group and sex</a></li>
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Household Population 10<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; years old and over by Age<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Group, Sex, and<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Marital Status </a></li>
                                     </ul>
                                 </li>
-                                <li style="font-size: 110%; padding-bottom: 8px; color: #cc5200"><a href="#" style="color: #cc5200">Health<span class="fa fa-angle-left" style="float: right"></span></a>
+                                <li style="font-size: 110%; padding-bottom: 8px; color: #cc5200"><a href="#" style="color: #cc5200">Health<span class="fa fa-angle-right" style="float: right; margin-right: 5%; margin-top: 1.5%;"></span></a>
                                     <ul class="treeview-menu">
                                         <li style="margin-left: -20px;"><a href="liveBirths.jsp"><i class="fa fa-circle-o circles-small"></i>Live Birth Per Day</a></li>
                                         <li style="margin-left: -20px;"><a href="hMortalityReport.jsp"><i class="fa fa-circle-o circles-small"></i>Mortality Report</a></li>
