--- a/web/importsAide.html
+++ b/web/importsAide.html
@@ -29,13 +29,13 @@ and open the template in the editor.
         <link rel="stylesheet" href="AdminLTE/plugins/daterangepicker/daterangepicker-bs3.css">
         <!-- bootstrap wysihtml5 - text editor -->
         <link rel="stylesheet" href="AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
-        
+
         <style>
             .circles-small{
                 font-size: 60%;
             }
         </style>
-        
+
     </head>
 
 
@@ -187,9 +187,9 @@ and open the template in the editor.
                             <ul>
                                 <li style="font-size: 110%; padding-bottom: 8px; color: #cc5200"><a href="#" style="color: #cc5200">Education<span class="fa fa-angle-right" style="float: right; margin-right: 5%; "></span></a>
                                     <ul class="treeview-menu">
-                                        <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Kindergarten Data in<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   Public Elementary School</a></li>
+                                        <li style="margin-left: -20px;"><a href="eKinderPublic.jsp"><i class="fa fa-circle-o circles-small"></i>Kindergarten Data in<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   Public Elementary School</a></li>
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Enrollment in Private<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Elementary Schools</a></li>
-                                        <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Enrollment in Private<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   KinderSchools</a></li>
+                                        <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Enrollment in Private<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   Kinder Schools</a></li>
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Enrollment in Public<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Elementary Schools</a></li>
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Enrollment in Public<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Secondary Schools (?)</a></li>
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Total Enrollment in Public<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Secondary Schools</a></li>
@@ -197,7 +197,7 @@ and open the template in the editor.
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Classroom Furnitures for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Government Secondary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Schools</a></li>
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Instructional Rooms for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Government Elementary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Schools</a></li>
                                         <li style="margin-left: -20px;"><a href=""><i class="fa fa-circle-o circles-small"></i>Instructional Rooms for<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Government Secondary<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Schools</a></li>
-                                        </ul>
+                                    </ul>
                                 </li>
                                 <li style="font-size: 110%; padding-bottom: 8px; color: #cc5200"><a href="#" style="color: #cc5200">Demographics<span class="fa fa-angle-right" style="float: right; margin-right: 5%;"></span></a>
                                     <ul class="treeview-menu">
