button design (kinder)

--- a/web/WEB-INF/JSPImports/importsAide.html
+++ b/web/WEB-INF/JSPImports/importsAide.html
@@ -136,32 +136,20 @@ and open the template in the editor.
                                 </ul>
                             </li>
                             <!-- User Account: style can be found in dropdown.less -->
-                            <li class="dropdown user user-menu">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <li class="user user-menu">
+                                <a href="#" >
                                     <span class="hidden-xs">
                                         <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                                        <b> Gian Roxas</b></span>
+                                        <b> Gian Roxas</b> - Planning Development Officer I</span>
                                 </a>
-                                <ul class="dropdown-menu">
-                                    <!-- User image -->
-                                    <li class="user-header">
-                                        <p>
-                                            Gian Roxas - PDO I
-                                        </p>
-                                    </li>
-                                    <li class="user-footer">
-                                        <div class="pull-left">
-                                            <a href="#" class="btn btn-default btn-flat">Profile</a>
-                                        </div>
-                                        <div class="pull-right">
-                                            <a href="logout" class="btn btn-default btn-flat">Sign out</a>
-                                        </div>
-                                    </li>
-                                </ul>
                             </li>
                             <!-- Control Sidebar Toggle Button -->
                             <li>
-                                <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+                                <a href="#"  class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-cog"></i></a>
+                                <ul class="dropdown-menu">
+                                    <li>My Profile</li>
+                                    <li><a href="logout">Sign out</a></li>
+                                </ul>
                             </li>
                         </ul>
                     </div>
